--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   </head>
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.js"></script>
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="300px" height="300px">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="300px" height="200px">
       <rect class="block" x="50" y="50" fill="#ff6347" width="100" height="100"/>
+      <rect class="block" x="150" y="50" fill="#a8eaff" width="100" height="100"/>
     </svg>
     <div>
         <textarea id="log"></textarea>
@@ -22,7 +23,7 @@
       var d = document;
       var log = document.getElementById("log");
 
-      var block = d3.select(".block");
+      var block = d3.selectAll(".block");
 
       block.on("touchstart", onDown);
       block.on("mousedown", onDown);
