--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!doctype html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <title>JS Playground</title>
   </head>
   <body>
     <h1>JS Playground</h1>
