Add preventDefault() vs stopPropagation() example

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="d3js-mouse-events.html">D3.js Mouse Events</a></li>
       <li><a href="d3js-enter-and-exit.html">D3.js Enter and Exit</a></li>
       <li><a href="mouse-and-pointer-events.html">Mouse, touch, pen and pointer events</a></li>
+      <li><a href="event-prevent-default.html">preventDefault() vs stopPropagation()</a></li>
     </ol>
   </body>
 </html>
