Add "Copy text, HTML and images to the clipboard" sample

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="d3js-enter-and-exit.html">D3.js Enter and Exit</a></li>
       <li><a href="mouse-and-pointer-events.html">Mouse, touch, pen and pointer events</a></li>
       <li><a href="event-prevent-default.html">preventDefault() vs stopPropagation()</a></li>
+      <li><a href="clipboard-copy.html">Copy text, HTML and images to the clipboard</a></li>
     </ol>
   </body>
 </html>
