Remove body from index.html and redirect to kiewic.com

--- a/index.html
+++ b/index.html
@@ -3,16 +3,9 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <meta http-equiv="refresh" content="0; url=http://kiewic.com/js-playground" />
       <title>JS Playground</title>
   </head>
   <body>
-    <h1>JS Playground</h1>
-    <ol>
-      <li><a href="d3js-mouse-events.html">D3.js Mouse Events</a></li>
-      <li><a href="d3js-enter-and-exit.html">D3.js Enter and Exit</a></li>
-      <li><a href="mouse-and-pointer-events.html">Mouse, touch, pen and pointer events</a></li>
-      <li><a href="event-prevent-default.html">preventDefault() vs stopPropagation()</a></li>
-      <li><a href="clipboard-copy.html">Copy text, HTML and images to the clipboard</a></li>
-    </ol>
   </body>
 </html>
