--- a/mouse-and-pointer-events.html
+++ b/mouse-and-pointer-events.html
@@ -101,19 +101,21 @@
     </script>
     <section>
       <h1>Summary</h1>
+      <p>What events are triggered when mouse, finger or pen are used?</p>
       <table>
         <tr>
           <td></td>
-          <td colspan="4">Mouse</td>
+          <td colspan="5">Mouse</td>
           <td colspan="4">Touch</td>
           <td colspan="4">Pen</td>
         </tr>
         <tr>
-            <td></td>
+            <td>browser</td>
             <td>C53</td>
             <td>C64</td>
             <td>Edge</td>
             <td>IE</td>
+            <td>Safari</td>
             <td>C53</td>
             <td>C64</td>
             <td>Edge</td>
@@ -125,6 +127,7 @@
         </tr>
         <tr>
           <td>mousedown</td>
+          <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
@@ -152,24 +155,11 @@
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
-        </tr>
-        <tr>
-          <td>click</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
-          <td>&#x2714;</td>
           <td>&#x2714;</td>
         </tr>
         <tr>
           <td>touchstart</td>
+          <td>&#x274C;</td>
           <td>&#x274C;</td>
           <td>&#x274C;</td>
           <td>&#x274C;</td>
@@ -185,6 +175,7 @@
         </tr>
         <tr>
           <td>touchend</td>
+          <td>&#x274C;</td>
           <td>&#x274C;</td>
           <td>&#x274C;</td>
           <td>&#x274C;</td>
@@ -205,6 +196,7 @@
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x274C;</td>
+          <td>&#x274C;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
@@ -220,10 +212,27 @@
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x274C;</td>
+          <td>&#x274C;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x274C;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+        </tr>
+        <tr>
+          <td>click</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
+          <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
