Mouse and pointer events: Add Safari touch event column and clarify Chrome versions

--- a/mouse-and-pointer-events.html
+++ b/mouse-and-pointer-events.html
@@ -106,27 +106,29 @@
         <tr>
           <td></td>
           <td colspan="5">Mouse</td>
-          <td colspan="4">Touch</td>
+          <td colspan="5">Touch</td>
           <td colspan="4">Pen</td>
         </tr>
         <tr>
             <td>browser</td>
-            <td>C53</td>
-            <td>C64</td>
+            <td>C54</td>
+            <td>Chrome</td>
             <td>Edge</td>
             <td>IE</td>
             <td>Safari</td>
-            <td>C53</td>
-            <td>C64</td>
+            <td>C54</td>
+            <td>Chrome</td>
             <td>Edge</td>
             <td>IE</td>
-            <td>C53</td>
-            <td>C64</td>
+            <td>Safari</td>
+            <td>C54</td>
+            <td>Chrome</td>
             <td>Edge</td>
             <td>IE</td>
         </tr>
         <tr>
           <td>mousedown</td>
+          <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
@@ -156,6 +158,7 @@
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
+          <td>&#x2714;</td>
         </tr>
         <tr>
           <td>touchstart</td>
@@ -168,6 +171,7 @@
           <td>&#x2714;</td>
           <td>&#x274C;</td>
           <td>&#x274C;</td>
+          <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x274C;</td>
@@ -186,6 +190,7 @@
           <td>&#x274C;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
+          <td>&#x2714;</td>
           <td>&#x274C;</td>
           <td>&#x274C;</td>
         </tr>
@@ -200,6 +205,7 @@
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
+          <td>&#x274C;</td>
           <td>&#x274C;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
@@ -216,6 +222,7 @@
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
+          <td>&#x274C;</td>
           <td>&#x274C;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
@@ -236,8 +243,11 @@
           <td>&#x2714;</td>
           <td>&#x2714;</td>
           <td>&#x2714;</td>
+          <td>&#x2714;</td>
         </tr>
       </table>
+      <p><b>C54:</b> Chrome 54 or earlier</p>
+      <p><b>Chrome:</b> Chrome 55 or later</p>
     </section>
   </body>
 </html>
