--- a/jquery-visible-example.html
+++ b/jquery-visible-example.html
@@ -26,7 +26,9 @@
         <p class="test">visible(false, false, "horizontal") <span id="visibleHorizontalValue"></span></p>
         <p class="test">visible(false, false, "vertical") <span id="visibleVerticalValue"></span></p>
         <p><a id="hideShowButton" href="#">hide/show</a></p>
-        <div class="moveable" style="width: 200px; height: 200px; background-color: aquamarine"></div>
+        <div class="moveable" style="width: 200px; height: 200px; background-color: aquamarine; cursor: grab"></div>
+        <p>Try:</p>
+        <pre>$(".moveable").css({ top: "-9999px", left: "-9999px" })</pre>
         <script>
             $(document).ready(function(){
                 var $dragging = null;
