Add DevTool Performance Mark instructions

--- a/devtools-performance-marks.html
+++ b/devtools-performance-marks.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <ol>
+        <li>Open DevTools</li>
+        <li>Go to Performance tab</li>
+        <li>Press Start profiling and reload page</li>
+        <li>Look for time labels in the Console timeline</li>
+        <li>Look for Timestamp labels in the Main timeline</li>
+        <li>You may need to check Disable JavaScript samples</li>
+    </ol>
     <script>
         "use strict";
 
