--- a/tel.html
+++ b/tel.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1> Hello = สวัสดี </h1>
-  <input type="tel" name="phone">
+  <input type="tel">
+  <input type="input">
 </body>
 </html>
