--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <meta http-equiv="refresh" content="0; url=http://kiewic.com/js-playground" />
+      <meta http-equiv="refresh" content="0; url=http://kiewic.com/js" />
       <title>JS Playground</title>
   </head>
   <body>
