--- a/video.html
+++ b/video.html
@@ -34,9 +34,10 @@
       width: 100%;
       height: 100%;
       background-color: #fff;
-      font-size: 40vw;
+      font-size: 26vw;
       text-align: center;
       text-transform: uppercase;
+      letter-spacing: -4vw;
       color: #000;
       line-height: 100vh;
       mix-blend-mode: screen;
@@ -48,7 +49,7 @@
     <video autoplay muted loop>
       <source src="./cancun.mp4" type="video/mp4" />
     </video>
-    <h1>MEX</h1>
+    <h1>Cancun</h1>
   </div>
 </body>
 </html>
