--- a/video.html
+++ b/video.html
@@ -46,7 +46,8 @@
 </head>
 <body>
   <div class="banner">
-    <video autoplay muted loop>
+    <!-- Read about playsinline at https://webkit.org/blog/6784/new-video-policies-for-ios/ -->
+    <video autoplay playsinline muted loop>
       <source src="./cancun.mp4" type="video/mp4" />
     </video>
     <h1>Cancun</h1>
