Replace video and slow down

--- a/video.html
+++ b/video.html
@@ -48,9 +48,12 @@
   <div class="banner">
     <!-- Read about playsinline at https://webkit.org/blog/6784/new-video-policies-for-ios/ -->
     <video autoplay playsinline muted loop>
-      <source src="./cancun.mp4" type="video/mp4" />
+      <source src="./cancun2.mp4" type="video/mp4" />
     </video>
     <h1>Cancun</h1>
+    <script>
+      document.querySelector('video').playbackRate = 0.5;
+    </script>
   </div>
 </body>
 </html>
