--- a/video.html
+++ b/video.html
@@ -33,14 +33,14 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #fff;
       font-size: 26vw;
       text-align: center;
       text-transform: uppercase;
       letter-spacing: -4vw;
-      color: #000;
+      background-color: #000;
+      color: #fff;
       line-height: 100vh;
-      mix-blend-mode: screen;
+      mix-blend-mode: multiply;
     }
   </style>
 </head>
@@ -52,7 +52,7 @@
     </video>
     <h1>Cancun</h1>
     <script>
-      document.querySelector('video').playbackRate = 0.5;
+      document.querySelector('video').playbackRate = 0.25;
     </script>
   </div>
 </body>
