Revert to white background

--- a/video.html
+++ b/video.html
@@ -37,10 +37,10 @@
       text-align: center;
       text-transform: uppercase;
       letter-spacing: -4vw;
-      background-color: #000;
-      color: #fff;
+      background-color: #fff;
+      color: #000;
       line-height: 100vh;
-      mix-blend-mode: multiply;
+      mix-blend-mode: screen;
     }
   </style>
 </head>
