--- a/vocabulary.html
+++ b/vocabulary.html
@@ -28,6 +28,14 @@
       font-weight: bold;
       color: #a93fd3;
     }
+    li a:visited,
+    li a:link {
+      color: inherit;
+      text-decoration: none;
+    }
+    li a:hover {
+      filter: grayscale(100%);
+    }
   </style>
 </head>
 
@@ -128,6 +136,7 @@
     <li>Calvary</li>
     <li>Colonel</li>
     <li>February</li>
+    <li>Hurricane</li>
   </ul>
   <script>
     const colorPairs = [
@@ -149,6 +158,10 @@
       listItem.style.backgroundColor = colorPairs[i % colorPairs.length][0];
       listItem.style.color = colorPairs[i % colorPairs.length][1];
       i = i + 1;
+
+      const word = listItem.innerText.trim();
+      const url = `https://www.bing.com/search?q=define+${encodeURIComponent(word)}`;
+      listItem.innerHTML = `<a href="${url}">${word}</a>`;
     }
   </script>
 </body>
