--- a/vocabulary.html
+++ b/vocabulary.html
@@ -33,7 +33,7 @@
       color: inherit;
       text-decoration: none;
     }
-    li a:hover {
+    li a:hover, li span:hover {
       filter: grayscale(100%);
     }
   </style>
@@ -41,7 +41,12 @@
 
 <body>
   <ul>
-    <li>Route</li>
+    <li>
+      <span>Route</span>
+      <audio src="dictionary/route.mp3" preload="none">
+        <track kind="captions" label="route">
+      </audio>
+    </li>
     <li>Determine</li>
     <li>Determined</li>
     <li>Undermine</li>
@@ -137,6 +142,7 @@
     <li>Colonel</li>
     <li>February</li>
     <li>Hurricane</li>
+    <li>Creaking</li>
   </ul>
   <script>
     const colorPairs = [
@@ -160,8 +166,15 @@
       i = i + 1;
 
       const word = listItem.innerText.trim();
-      const url = `https://www.bing.com/search?q=define+${encodeURIComponent(word)}`;
-      listItem.innerHTML = `<a href="${url}">${word}</a>`;
+      if (word === 'Route') {
+        listItem.addEventListener('click', function() {
+          document.querySelector('audio').play();
+        });
+      }
+      else {
+        const url = `https://www.bing.com/search?q=define+${encodeURIComponent(word)}`;
+        listItem.innerHTML = `<a href="${url}">${word}</a>`;
+      }
     }
   </script>
 </body>
