--- a/vocabulary.html
+++ b/vocabulary.html
@@ -54,6 +54,34 @@
   <script>
     const words = [
       {
+        text: 'Carbohydrate',
+        audio: 'carbohydrate.mp3'
+      },
+      {
+        text: 'Vital',
+        audio: 'vital.mp3'
+      },
+      {
+        text: 'Abide',
+        audio: 'abide.mp3'
+      },
+      {
+        text: 'Entrepreneur',
+        audio: 'entrepreneur.mp3'
+      },
+      {
+        text: 'Representative',
+        audio: 'representative.mp3'
+      },
+      {
+        text: 'Pliers',
+        audio: 'pliers.mp3'
+      },
+      {
+        text: 'Pear',
+        audio: 'pear.mp3'
+      },
+      {
         text: 'Route',
         audio: 'route.mp3'
       },
@@ -159,6 +187,10 @@
       {
         text: 'Vary',
         audio: 'vary.mp3'
+      },
+      {
+        text: 'Very',
+        audio: 'very.mp3'
       },
       {
         text: 'Annual',
@@ -343,14 +375,14 @@
         title: 'AV-rej',
         audio: 'average.mp3'
       },
-      {
-        text: 'Barbara',
-        title: 'BAR-bruh',
-      },
-      {
-        text: 'Margaret',
-        title: 'MAR-gret',
-      },
+      // {
+      //   text: 'Barbara',
+      //   title: 'BAR-bruh',
+      // },
+      // {
+      //   text: 'Margaret',
+      //   title: 'MAR-gret',
+      // },
       {
         text: 'Basically',
         title: 'BASE-ik-ly',
