--- a/debounce.html
+++ b/debounce.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>border-radius hello world</title>
+    <title>Lodash debounce example</title>
     <style>
         html {
             height: 100%;
