--- a/svg-text-tspan-text-anchor.html
+++ b/svg-text-tspan-text-anchor.html
@@ -7,26 +7,19 @@
 </head>
 
 <body>
-  <svg height="360" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+  <svg height="240" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
     <!-- Border -->
     <rect width="120" height="120" style="stroke:pink;fill:white;stroke-width:3;" />
-
-    <!-- Materialization of anchors -->
-    <path d="M60,15 L60,110 M30,30 L90,30 M30,60 L90,60 M30,90 L90,90" stroke="grey" />
+    <path d="M60,5 L60,115 M5,60 L115,60" stroke="pink" />
 
     <g transform="translate(60,0)">
       <text x="60" y="60" tabindex="0" focusable="true"
         style="fill: rgb(96, 94, 92); font-family: 'Segoe UI', wf_segoe-ui_normal, helvetica, arial, sans-serif; font-size: 12px; text-anchor: middle;">
         <tspan x="0" dy="0">Hello, today</tspan>
-        <tspan x="0" dy="15.96875">is Thursday!</tspan>
+        <tspan x="0" dy="15.96875" style="fill: lightsalmon">is Thursday!</tspan>
         <title>This is the title</title>
       </text>
     </g>
-
-    <!-- Materialization of anchors -->
-    <circle cx="60" cy="30" r="3" fill="red" />
-    <circle cx="60" cy="60" r="3" fill="red" />
-    <circle cx="60" cy="90" r="3" fill="red" />
 
     <style>
       <![CDATA[
@@ -37,26 +30,21 @@
     </style>
   </svg>
 
-  <svg height="360" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+  <svg height="240" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
     <!-- Border -->
     <rect width="120" height="120" style="stroke:pink;fill:white;stroke-width:3;" />
-
-    <!-- Materialization of anchors -->
-    <path d="M60,15 L60,110 M30,30 L90,30 M30,60 L90,60 M30,90 L90,90" stroke="grey" />
+    <path d="M60,5 L60,115 M5,60 L115,60" stroke="pink" />
 
     <g transform="translate(60,0)">
       <text x="60" y="60" tabindex="0" focusable="true"
         style="fill: rgb(96, 94, 92); font-family: 'Segoe UI', wf_segoe-ui_normal, helvetica, arial, sans-serif; font-size: 12px; text-anchor: middle;">
         <tspan x="0" dy="0">دولة الإمارات العربية</tspan>
-        <tspan x="0" dy="15.96875">المتحدة</tspan>
+        <!-- Hack using the Left-To-Right Mark -->
+        <!-- <tspan dx="-0.5em" class="br">&#x200E;</tspan> -->
+        <tspan x="0" dy="20" style="fill: lightsalmon">المتحدة</tspan>
         <title>دولة الإمارات العربية المتحدة</title>
       </text>
     </g>
-
-    <!-- Materialization of anchors -->
-    <circle cx="60" cy="30" r="3" fill="red" />
-    <circle cx="60" cy="60" r="3" fill="red" />
-    <circle cx="60" cy="90" r="3" fill="red" />
 
     <style>
       <![CDATA[
@@ -67,24 +55,18 @@
     </style>
   </svg>
 
-  <svg height="360" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+  <svg height="240" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
     <!-- Border -->
     <rect width="120" height="120" style="stroke:pink;fill:white;stroke-width:3;" />
-
-    <!-- Materialization of anchors -->
-    <path d="M60,15 L60,110 M30,30 L90,30 M30,60 L90,60 M30,90 L90,90" stroke="grey" />
+    <path d="M60,5 L60,115 M5,60 L115,60" stroke="pink" />
 
     <text x="60" y="60" tabindex="0" focusable="true"
       style="fill: rgb(96, 94, 92); font-family: 'Segoe UI', wf_segoe-ui_normal, helvetica, arial, sans-serif; font-size: 12px; text-anchor: middle;">
-      <tspan cx="0" cy="16">المتحدة</tspan>
-      <tspan cx="0" cy="0">دولة الإمارات العربية</tspan>
+      <!-- When using `dx` instead of `x`, even Chrome thinks the two tspans are in a single line -->
+      <tspan dx="0" dy="0">دولة الإمارات العربية</tspan>
+      <tspan dx="0" dy="30" style="fill: lightsalmon">المتحدة</tspan>
       <title>دولة الإمارات العربية المتحدة</title>
     </text>
-
-    <!-- Materialization of anchors -->
-    <circle cx="60" cy="30" r="3" fill="red" />
-    <circle cx="60" cy="60" r="3" fill="red" />
-    <circle cx="60" cy="90" r="3" fill="red" />
 
     <style>
       <![CDATA[
