Cleanup: renames, deletions, etc.

--- a/visualizations/celsius-fahrenheit.html
+++ b/visualizations/celsius-fahrenheit.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Celsius Fahrenheit Chart</title>
-    <script src="https://d3js.org/d3.v5.js"></script>
+    <script src="../d3.v7.js"></script>
     <style>
         line {
             stroke: #ddd;
