--- a/event-contextmenu.html
+++ b/event-contextmenu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DevTools Performance Marks</title>
+    <title>click vs contextmenu</title>
     <style>
         #contextMenu {
             height: 100px;
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <p id="log">Log</p>
     <p>
         <svg id="contextMenu" version="1.1" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="100px">
@@ -25,7 +26,6 @@
             <rect class="block" x="100" y="0" fill="#a8eaff" width="100" height="100" />
         </svg>
     </p>
-    <p id="log">Log</p>
     <script>
         "use strict";
 
