--- a/keyboard-events.html
+++ b/keyboard-events.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>preventDefault() vs stopPropagation()</title>
+    <title>keydown vs keypress vs keyup</title>
     <style>
         input {
             margin-top: 10px;
