--- a/visualizations/elevation-bar-chart.html
+++ b/visualizations/elevation-bar-chart.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>JS Playground</title>
-  <script src="./d3.v7.js"></script>
+  <script src="../d3.v7.js"></script>
 </head>
 
 <body>
