--- a/visualizations/elevation-bar-chart.html
+++ b/visualizations/elevation-bar-chart.html
@@ -2,101 +2,118 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>JS Playground</title>
-  <script src="../d3.v7.js"></script>
+    <meta charset="utf-8">
+    <title>Elevation above sea level</title>
+    <script src="../d3.v7.js"></script>
+    <style>
+        svg {
+            border: grey 1px solid;
+        }
+
+        .bar-label {
+            font-size: 10px;
+            text-anchor: middle;
+        }
+    </style>
 </head>
 
 <body>
-  <script>
-    // Define the data
-    const data = [{
-        name: 'Mount Rainier',
-        elevation: 14411
-      },
-      {
-        name: 'Mauna Kea',
-        elevation: 13803
-      },
-      {
-        name: 'MEX',
-        elevation: 7350
-      },
-      {
-        name: 'GDL',
-        elevation: 5016
-      },
-      {
-        name: 'SEA',
-        elevation: 433
-      }
-    ];
+    <script>
+        d3.json('../data/elevation.json').then(data => {
+            data = data.flatMap(category => category.items.map(item => item));
+            data.sort((item1, item2) => item2.elevation - item1.elevation);
 
-    // Define the dimensions of the chart
-    const width = 600;
-    const height = 400;
-    const margin = {
-      top: 20,
-      right: 20,
-      bottom: 30,
-      left: 50
-    };
+            // Define the dimensions of the chart
+            const width = 660;
+            const height = 440;
+            const margin = {
+                top: 20 + 24,
+                right: 20,
+                bottom: 30,
+                left: 70
+            };
 
-    // Create the SVG element
-    const svg = d3.select('body')
-      .append('svg')
-      .attr('width', width + margin.left + margin.right)
-      .attr('height', height + margin.top + margin.bottom)
-      .append('g')
-      .attr('transform', `translate(${margin.left}, ${margin.top})`);
+            // Create the SVG element
+            const svg = d3.select('body')
+                .append('svg')
+                .attr('width', width + margin.left + margin.right)
+                .attr('height', height + margin.top + margin.bottom)
+                .append('g')
+                .attr('transform', `translate(${margin.left}, ${margin.top})`);
 
-    // Define the scales
-    const xScale = d3.scaleBand()
-      .domain(data.map(d => d.name))
-      .range([0, width])
-      .padding(0.1);
+            // Define the scales
+            const xScale = d3.scaleBand()
+                .domain(data.map(d => d.name))
+                .range([0, width])
+                .padding(0.1);
 
-    const yScale = d3.scaleLinear()
-      .domain([0, d3.max(data, d => d.elevation)])
-      .range([height, 0]);
+            const yScale = d3.scaleLinear()
+                .domain([0, d3.max(data, d => d.elevation)])
+                .range([height, 0]);
 
-    // Create the bars
-    svg.selectAll('.bar')
-      .data(data)
-      .enter()
-      .append('rect')
-      .attr('class', 'bar')
-      .attr('x', d => xScale(d.name))
-      .attr('y', d => yScale(d.elevation))
-      .attr('width', xScale.bandwidth())
-      .attr('height', d => height - yScale(d.elevation));
+            // Define a color scale
+            const colorScale = d3.scaleOrdinal()
+                .domain(data.map(d => d.name))
+                .range(d3.schemeTableau10);
 
-    // Add the x-axis
-    svg.append('g')
-      .attr('transform', `translate(0, ${height})`)
-      .call(d3.axisBottom(xScale));
+            // Create the bars
+            svg.selectAll('.bar')
+                .data(data)
+                .enter()
+                .append('rect')
+                .attr('class', 'bar')
+                .attr('x', d => xScale(d.name))
+                .attr('y', d => yScale(d.elevation))
+                .attr('width', xScale.bandwidth())
+                .attr('height', d => height - yScale(d.elevation))
+                .attr('fill', d => colorScale(d.name));
 
-    // Add the y-axis
-    svg.append('g')
-      .call(d3.axisLeft(yScale));
+            // Add data labels
+            svg.selectAll('.bar-label')
+                .data(data)
+                .enter()
+                .append('text')
+                .attr('class', 'bar-label')
+                .attr('x', d => xScale(d.name) + xScale.bandwidth() / 2)
+                .attr('y', d => {
+                    const labelY = yScale(d.elevation);
+                    const labelSpace = 16; // Space for label inside bar
+                    return labelY - labelSpace >= 20 ? labelY - labelSpace : labelY + labelSpace;
+                })
+                .text(d => d.elevation)
+                .style('fill', 'black')
+                .style('font-size', '10px');
 
-    // Add the y-axis label
-    svg.append('text')
-      .attr('transform', 'rotate(-90)')
-      .attr('y', 0 - margin.left)
-      .attr('x', 0 - (height / 2))
-      .attr('dy', '1em')
-      .style('text-anchor', 'middle')
-      .text('Elevation (ft)');
+            // Add the x-axis
+            svg.append('g')
+                .attr('transform', `translate(0, ${height})`)
+                .call(d3.axisBottom(xScale));
 
-    // Add the title
-    svg.append('text')
-      .attr('x', width / 2)
-      .attr('y', 0 - margin.top / 2)
-      .attr('text-anchor', 'middle')
-      .style('font-size', '24px')
-      .text('Elevation of Various Locations');
-  </script>
+            // Add the y-axis
+            svg.append('g')
+                .call(d3.axisLeft(yScale));
+
+            // Add the y-axis label
+            svg.append('text')
+                .attr('transform', 'rotate(-90)')
+                .attr('y', 0 - margin.left)
+                .attr('x', 0 - (height / 2))
+                .attr('dy', '1em')
+                .style('text-anchor', 'middle')
+                .text('Elevation (ft)');
+
+            // Add title to the top of the chart
+            svg.append('text')
+                .attr('x', width / 2)
+                .attr('y', -10) // Position above the chart
+                .attr('text-anchor', 'middle')
+                .attr('fill', 'black')
+                .style('font-size', '16px')
+                .text('Elevation above sea level');
+        }).catch(error => {
+            console.error('Error loading data:', error);
+        });
+    </script>
 </body>
 
 </html>
